/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 16:55 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

/*
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 Old changelogs are archived in directory
 "oldlogs".
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
*/

2025-04-18 13:00 UTC-0300 Jose Quintas jmcquintas-gmail.com
   - samples/demogetdesktopsize.prg
   - samples/demogetdesktopsize.hbp
      ! removed, there are more samples using it
   - samples/*.prg
     ! on new samples add source code name on dialog caption
     ! no other change
     ! end of single format
     ! test hbmk2 *.hbp on win11 ok

2025-04-18 11:10 UTC-0300 Jose Quintas jmcquintas-gmail.com
   * samples/a.prg
     ! menu caption changed, one menu option caption changed
   * samples/grid_3.prg
   * samples/grid_4.prg
   * samples/grid_5.prg
   * samples/hello.prg
   * samples/helpdemo.prg
   * samples/helpstatic.prg
   * samples/hexbincnt.prg
   * samples/hole.prg
   * samples/htrack.prg
   * samples/icons.prg
   * samples/icons2.prg
   * samples/memocmp.prg
   * samples/modtitle.prg
   * samples/nice2.prg
   * samples/night.prg
   * samples/progbars.prg
   * samples/propsh.prg
   * samples/pseudocm.prg
   * samples/testget2.prg
   * samples/tstconsapp.prg
   * samples/winprn.prg
     ! no change, continue single format to best view used options

2025-04-17 21:00 UTC-0300 Jose Quintas jmcquintas-gmail.com
   * samples/*.prg
     ! continue format source code to visibility only
     ! no extra change. Example:
     ! INIT Dialog oDlg ;
     !    AT    0,0 ;
     !    TITLE cstr ;
     !    SIZE  500,400 ;
     !    CLIPPER ;
     !    NOEXIT ;
     !    NOEXITESC
     ! On this format, options used are visible
     ! 35 files updated, 46 remaining

2025-04-17 14:40 UTC-0300 Jose Quintas jmcquintas-gmail.com
   * samples/a.prg
   * samples/demobasic.prg
   * samples/demodbfdata.prg
   * samples/demoini.prg